--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <div class="clearfix">
             <img class="speaker-pic" src="css/alain.jpg">
             <h2>Alain Vagner - @biou</h2>
-            <span>fan de procrastination fonctionnelle</span>
+            <span>procrastination fonctionnelle</span>
           </div>
           <br><br>
           <div class="clearfix">
@@ -194,11 +194,9 @@
           <section>
             <img class="workimg" src="css/workimg/johnny-automatic-Dapper-Dan-800px.png" style="position:absolute;right:-16%">
             <h1>Functions as first class citizen</h1>
-            <h4>Fonction d'ordre supérieur</h4>
+            <h4>Fonctions d'ordre supérieur</h4>
             <br>
             <blockquote>
-              Dans un langage traitant les fonctions comme des<br>
-              "citoyens de 1ère classe",<br>
               les fonctions peuvent être passées en paramètre<br>
               et/ou en retour d'autres fonctions.
             </blockquote>
