--- a/slides/composition3.html
+++ b/slides/composition3.html
@@ -2,7 +2,7 @@
 
 <!-- exemple -->
 <pre><code id="composition" class="javascript" data-trim data-noescape>
-//exemple fonctionnel basique
+//exemple POO / fonctionnel
 
 var notes = [ 1, 2, 3 ]
 
