--- a/slides/curry3.html
+++ b/slides/curry3.html
@@ -1,6 +1,6 @@
 <h1>Exercice</h1>
 
-Implémenter map, join, addToDomElem<br>
+Implémenter map(), join(), addToDomElem()<br>
 en y mettant un peu de curry 🍜<br>
 
 <pre><code class="javascript" data-trim data-noescape>
