--- a/slides/exercices/_start.html
+++ b/slides/exercices/_start.html
@@ -1,6 +1,11 @@
 <h1>Getting started</h1>
 
-<img class="sshot" src="./slides/images/electron.png" alt="screenshot" />
+<pre><code class="bash" data-trim data-noescape>
+$> git clone git@github.com:vincent/js-fp-tool.git
+$> npm i && npm start
+</code></pre>
+
+<img class="sshot" style="width: 80%" src="./slides/images/electron.png" alt="screenshot" />
 
 <aside class="notes">
   Donc vous devriez avoir devant vous quelque chose qui ressemble à ça.<br>
