--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="clearfix">
             <img class="speaker-pic" src="css/vincent.jpg">
             <h2>Vincent Lark - @allyouneedisgnu</h2>
-            <span>sugar-powered developer</span>
+            <span>function is undefined</span>
           </div>
           <aside class="notes">
             Tout d'abord, une rapide présentation.
@@ -242,6 +242,8 @@
             <h1>Fonctions pures<br><small>&amp;</small><br>Effets de bord</h1>
             <aside class="notes">
               Vincent<br>
+              Avant de parler de fonctions pures, il faut prendre un peu  de recul<br>
+              Et parler de ce va différencier la prog. fonc. des autres paradigmes.<br>
             </aside>
           </section>
           <section data-external="slides/poocnul.html"></section>
@@ -272,7 +274,6 @@
             </aside>
           </section>
           <section data-external="slides/ex_mutations.html"></section>
-          <section data-external="slides/fonctionalonly.html"></section>
 
           <section>
             <aside class="notes">
