--- a/slides/exercices/ex1.html
+++ b/slides/exercices/ex1.html
@@ -14,9 +14,8 @@ simpleTrack().forEach(function (event) {
 <aside class="notes">
   Tout le monde a un environement fonctionnel ?<br>
   Sinon appelez à l'aide, on vous aide pour qu'on puisse tous commencer ensemble.<br>
-  Alors le moment est  venu de vous dévoiler ce qu'on vous a préparé...<br>
-  essayez donc le petit bout de code qu'on affiche là...<br>
-  Si tout se passe bien, vous devriez avoir une ribambelle de chose dans la console.<br>
+  Essayez donc le petit bout de code qu'on affiche là..<br>
+  Si tout se passe bien, vous devriez avoir une plein de choses dans la console.<br>
   Cette longue liste d'éléments, c'est en fait une partition MIDI<br>
   On va essayer de travailler de manière fonctionelle sur des morceaux MIDI
 </aside>
