--- a/slides/function_as_argument.html
+++ b/slides/function_as_argument.html
@@ -16,5 +16,6 @@ simpleTrack().forEach(show)
 
 <aside class="notes">
   IMPORTANT<br>
-  Les novices peuvent confondre définition, appel, et référence
+  Les novices peuvent confondre définition, appel, et référence<br>
+  CHECK
 </aside>
