--- a/slides/function_as_return.html
+++ b/slides/function_as_return.html
@@ -30,5 +30,6 @@ function transpose (type) {
 
 <aside class="notes">
   octave fait référence à une nouvelle fonction<br>
-  qui, quand on l'appelle, ajoute 8 à l'argument passé
+  qui, quand on l'appelle, ajoute 8 à l'argument passé<br>
+  CHECK
 </aside>
