--- a/slides/midi.html
+++ b/slides/midi.html
@@ -12,7 +12,7 @@
 <!-- pour l'animation, voir dans index.html -->
 
 <aside class="notes">
-  créé en ~ 1980
+  créé en ~ 1980<br>
   prog. fonctionnelle s'applique bien à des flux de données. Le midi fonctionne en mode flux ou en mode fichier. Le fichier est simplement un enregistrement du flux.<br>
   principaux attributs du message:<br>
   channel: 16 canaux midi, peuvent jouer de la musique simultanément, on peut associer un instrument différent à chaque canal<br>
