--- a/slides/midi2.html
+++ b/slides/midi2.html
@@ -13,3 +13,11 @@ var midi = {
   ]
 }
 </code></pre>
+
+<aside class="notes">
+  voila à quoi ressemble la structure MIDI, en JS<br>
+  <br>
+  on va reprendre sur la théorie<br>
+  n'hésitez pas à regarder un peu le support d'atelier<br>
+  il y a une petite doc avec des fonctions dispos
+</aside>
