--- a/slides/async.html
+++ b/slides/async.html
@@ -3,7 +3,7 @@
 <ul>
   <li>50+ fonctions utilitaires</li>
   <li>pour manipuler l'enchainement de fonctions</li>
-  <li>au sein de workflows asynchrones</li>
+  <li>workflows asynchrones</li>
 </ul>
 
 <br><br>
