--- a/slides/mixpoofonctionelle.html
+++ b/slides/mixpoofonctionelle.html
@@ -13,5 +13,6 @@
   On utilise souvent bcp de petits modules, chacun leur spécificité<br>
   La POO peut être plus utile dans certains cas (notion d'héritage, etc..)<br>
   Attention: dans une codebase fonctionnelle, éviter d'introduire de la POO accessible<br>
+  Attention: si la fonction effectue une mutation sur un autre objet, préciser dans la doc<br>
   Principe de moindre surprise
 </aside>
