added uppercase at beginning of lines

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
             <h4>Fonctions d'ordre supérieur</h4>
             <br>
             <blockquote>
-              les fonctions peuvent être passées en paramètre<br>
+              Les fonctions peuvent être passées en paramètre<br>
               et/ou en retour d'autres fonctions.
             </blockquote>
             <aside class="notes">
