--- a/slides/fonctionalonly.html
+++ b/slides/fonctionalonly.html
@@ -1,11 +1,11 @@
 <h3>Que des fonctions pures ?</h3>
 <br>
 <ul>
-  <li>non !</li>
-  <li>toujours une bonne pratique, a priori</li>
-  <li>mais au niveau local, on peut avoir besoin de mutations</li>
-  <li>il s'agit surtout des fonctions visibles de l'exterieur</li>
-  <li>les mutations devraient être invisibles par l'appelant</li>
+  <li>Non !</li>
+  <li>Toujours une bonne pratique, a priori</li>
+  <li>Mais au niveau local, on peut avoir besoin de mutations</li>
+  <li>Il s'agit surtout des fonctions visibles de l'exterieur</li>
+  <li>Les mutations devraient être invisibles par l'appelant</li>
 </ul>
 
 <aside class="notes">
