--- a/slides/lodash.html
+++ b/slides/lodash.html
@@ -2,7 +2,7 @@
 
 <ul>
   <li>100+ fonctions utilitaires</li>
-  <li>pour manipuler les tableaux, les objets</li>
+  <li>Pour manipuler les tableaux, les objets</li>
 </ul>
 
 <br><br>
