--- a/slides/mixpoofonctionelle.html
+++ b/slides/mixpoofonctionelle.html
@@ -2,10 +2,10 @@
 <h3>Non ! Rien n'empêche d'utiliser les deux concepts</h3>
 <br>
 <ul>
-  <li>on peut réutiliser du code existant</li>
-  <li>on peut préférer la POO pour certains aspects</li>
-  <li>au final, plus un choix subjectif qu'une règle d'or</li>
-  <li>juste éviter de mixer les deux dans un même namespace</li>
+  <li>On peut réutiliser du code existant</li>
+  <li>On peut préférer la POO pour certains aspects</li>
+  <li>Au final, plus un choix subjectif qu'une règle d'or</li>
+  <li>Juste éviter de mixer les deux dans un même namespace</li>
 </ul>
 
 <aside class="notes">
