--- a/slides/poocnul.html
+++ b/slides/poocnul.html
@@ -2,7 +2,7 @@
 <h1>La POO c'est 💩 ?</h1>
 
 <ul>
-  <li>un progrès dans la façon de coder</li>
-  <li>séparation des responsabilités</li>
+  <li>Un progrès dans la façon de coder</li>
+  <li>Séparation des responsabilités</li>
   <li style="list-style-type: none; text-align: center; margin: 15px 0; font-weight: bold;">MAIS</li>
 </ul>
