--- a/slides/poocnul2.html
+++ b/slides/poocnul2.html
@@ -1,8 +1,8 @@
 <h1>La POO c'est 💩 ?</h1>
 
 <ul>  
-  <li>amène des <strong>effets de bord</strong></li>
-  <li>méthode qui modifie un attribut, pas prévu par l'appelant</li>
-  <li>en prog ƒ<sup>elle</sup> éviter les changements d'état pour limiter ces effets de bords</li>
-  <li>un langage purement fonctionnel oblige l'utilisation de fonctions uniquement</li>
+  <li>Amène des <strong>effets de bord</strong></li>
+  <li>Méthode qui modifie un attribut, pas prévu par l'appelant</li>
+  <li>En prog ƒ<sup>elle</sup> éviter les changements d'état pour limiter ces effets de bords</li>
+  <li>Un langage purement fonctionnel oblige l'utilisation de fonctions uniquement</li>
 </ul>
