--- a/slides/promises.html
+++ b/slides/promises.html
@@ -2,9 +2,9 @@
 <h1>Promises</h1>
 
 <ul>
-  <li>meilleure gestion des erreurs</li>
-  <li>dans un contexte asynchrone</li>
-  <li>pallier au "callback hell" (⚠)</li>
+  <li>Meilleure gestion des erreurs</li>
+  <li>Sans un contexte asynchrone</li>
+  <li>Pallier au "callback hell" (⚠)</li>
 </ul>
 
 <aside class="notes">
