--- a/slides/react.html
+++ b/slides/react.html
@@ -1,9 +1,9 @@
 <h1>React</h1>
 
 <ul>
-	<li>librairie basée composants pour les vues Web</li>
-	<li>inspiration fonctionnelle</li>
-	<li>découpler l'état de l'affichage</li>
+	<li>Librairie basée composants pour les vues Web</li>
+	<li>Inspiration fonctionnelle</li>
+	<li>Découpler l'état de l'affichage</li>
 </ul>
 
 
