--- a/slides/async.html
+++ b/slides/async.html
@@ -2,8 +2,8 @@
 
 <ul>
   <li>50+ fonctions utilitaires</li>
-  <li>pour manipuler l'enchainement de fonctions</li>
-  <li>au sein de workflows asynchrones</li>
+  <li>Pour manipuler l'enchainement de fonctions</li>
+  <li>Au sein de workflows asynchrones</li>
 </ul>
 
 <br><br>
