--- a/slides/composition5.html
+++ b/slides/composition5.html
@@ -1,5 +1,5 @@
 <img class="workimg" src="css/workimg/johnny-automatic-Mississippi-pilot-800px.png" style="height:50%;position:absolute;left:-21%;top:39%">
-<h1>Tap() et trace()</h1>
+<h1>tap() et trace()</h1>
 
 Comment débugguer un pipe() ?<br>
 
