--- a/index.html
+++ b/index.html
@@ -82,13 +82,13 @@
         <section>
           <div class="clearfix">
             <img class="speaker-pic" src="css/alain.jpg">
-            <h2>Alain Vagner - @biou</h2>
+            <h2>Alain Vagner<br>@biou</h2>
             <span>procrastination fonctionnelle</span>
           </div>
           <br><br>
           <div class="clearfix">
             <img class="speaker-pic" src="css/vincent.jpg">
-            <h2>Vincent Lark - @allyouneedisgnu</h2>
+            <h2>Vincent Lark<br>@allyouneedisgnu</h2>
             <span>function is undefined</span>
           </div>
           <aside class="notes">
