refactoring post demo

--- a/slides/composition.html
+++ b/slides/composition.html
@@ -1,7 +1,7 @@
 <h1>Composition</h1>
 
 <ul>
-  <li>Composer des fonctions simples pour en construire de plus complexes</li>
+  <li>Appliquer une fonction au résultat d'une autre</li>
   <li>Comme la composition de fonctions en maths: 
     <ul>
       <li>le résultat d'une fonction est passé à la suivante,</li>
