--- a/slides/es6-7.html
+++ b/slides/es6-7.html
@@ -1,4 +1,4 @@
-<h1>ES6, ES7, ...</h1>
+<h1>ES6+</h1>
 
 <ul>
 <li>De nouvelles structures de données: Maps et Sets</li>
@@ -15,6 +15,7 @@
 
 
 <aside class="notes">
+- Babel supporte tout ça !<br>
 - tail call optimization: hyper utile pour pouvoir utiliser plus souvent du code récursif, de manière efficace et sans plantage. Babel le supporte<br>
 </aside>
 
