--- a/slides/react3.html
+++ b/slides/react3.html
@@ -8,7 +8,7 @@
 <br>
 <br>
 <ul>
-<li>D'autres libs vont plus loin, ex: <a href="https://baconjs.github.io/">bacon.js</a></li>
+<li>Autre concept, Functional Reactive Programming ex: <a href="https://baconjs.github.io/">bacon.js</a></li>
 </ul>
 
 
