--- a/slides/comparaison.html
+++ b/slides/comparaison.html
@@ -1,17 +1,17 @@
 <h1>Concrètement</h1>
 
 <pre><code class="javascript" data-trim data-noescape>
-var notes = [ 'do', 'ré', 'mi', 'fa' ];
+var notes = [ 'do', 'ré', 'mi', 'fa' ]
 </code></pre>
 <pre><code class="javascript" data-trim data-noescape>
 for (var i = 0; i < 10; i++) {
-  console.log(notes[i]);
+  console.log(notes[i])
 }
 </code></pre>
 vs
 <pre><code class="javascript" data-trim data-noescape>
-notes.forEach(function(note){
-  console.log(note);
+notes.forEach(function(note) {
+  console.log(note)
 })
 </code></pre>
 
