--- a/slides/composition3.html
+++ b/slides/composition3.html
@@ -9,10 +9,10 @@ var notes = [ 1, 2, 3 ]
 function displayNotes(elem, notes) {
   addToDomElem(elem, 
     notes.map(noteValueToText)
-      .join(' '));
+      .join(' '))
 }
 
-var outputNotes = displayNotes('output', notes);
+var outputNotes = displayNotes('output', notes)
 </code></pre>
 
 <aside class="notes">
