--- a/slides/curry3.html
+++ b/slides/curry3.html
@@ -9,11 +9,11 @@ function displayNotes(elem) {
     map(noteValueToText),
     join(' '),
     addToDomElem(elem)
-  );
+  )
 }
 
-var outputNotes = displayNotes('output');
-outputNotes([1,2,3]);
+var outputNotes = displayNotes('output')
+outputNotes([1, 2, 3])
 </code></pre>
 
 
