--- a/slides/either.html
+++ b/slides/either.html
@@ -6,8 +6,8 @@ Soit une valeur, soit une erreur.
 
 <pre><code  class="javascript" data-trim data-noescape>
 // Création d'un Either
-var a = Either.Right(value);
-var b = Either.Left(error);
+var a = Either.Right(value)
+var b = Either.Left(error)
 
 // chaîner
 var c = b.flatMap(task)
