--- a/slides/ex_fonctionpure.html
+++ b/slides/ex_fonctionpure.html
@@ -2,7 +2,7 @@
 
 <pre><code class="javascript" data-trim data-noescape>
 function addNote(partition, note) {
-  return [].concat(partition, note);
+  return [].concat(partition, note)
 }
 </code></pre>
 
