--- a/slides/ex_mutations.html
+++ b/slides/ex_mutations.html
@@ -1,12 +1,12 @@
 <h1>Mutations ?</h1>
 
 <pre><code class="javascript" data-trim data-noescape>
-var notes = [ 'do', 'ré', 'mi', 'fa' ];
+var notes = [ 'do', 'ré', 'mi', 'fa' ]
 
 function addNote (note) {
   // mutation de `notes`
-  notes.push(note);
-  return notes;
+  notes.push(note)
+  return notes
 }
 </code></pre>
 
