--- a/slides/ex_nomutations.html
+++ b/slides/ex_nomutations.html
@@ -1,9 +1,9 @@
 <h1>Mutations ?</h1>
 
 <pre class="fragment"><code class="javascript" data-trim data-noescape>
-var notes = [ 'do', 'ré', 'mi', 'fa' ];
+var notes = [ 'do', 'ré', 'mi', 'fa' ]
 
 function addNote (note) {
-  return notes.concat(note);
+  return notes.concat(note)
 }
 </code></pre>
