--- a/slides/exercices/ex1.html
+++ b/slides/exercices/ex1.html
@@ -6,8 +6,8 @@
 
 <pre><code class="javascript" data-trim data-noescape>
 simpleTrack().forEach(function (event) {
-  console.log(event);
-  // debugger;
+  console.log(event)
+  // debugger
 })
 </code></pre>
 
