--- a/slides/filter.html
+++ b/slides/filter.html
@@ -7,10 +7,10 @@ Applique une fonction à chaque élément, et<br> retourne <b>tous ceux</b> pour
 <br>
 
 <pre><code class="javascript" data-trim data-noescape>
-var partition = [ 42, 24, 91, 14, 27, 34 ];
+var partition = [ 42, 24, 91, 14, 27, 34 ]
 
-partition.filter(function (note){
-  return note < 30;
+partition.filter(function (note) {
+  return note < 30
 })
 
 // [ 24, 14, 27 ]
