--- a/slides/function_as_argument.html
+++ b/slides/function_as_argument.html
@@ -1,15 +1,15 @@
 <h4>Une ƒ° en paramètre</h4>
 <pre><code class="javascript" data-trim data-noescape>
 simpleTrack().forEach(function (event) {
-  console.log(event);
+  console.log(event)
 })
 </code></pre>
 
 <br>
 
 <pre class="fragment"><code class="javascript" data-trim data-noescape>
-function show (event){
-  console.log(event);
+function show (event) {
+  console.log(event)
 }
 simpleTrack().forEach(show)
 </code></pre>
