--- a/slides/map.html
+++ b/slides/map.html
@@ -1,13 +1,13 @@
 <h1>map()</h1>
 
 <blockquote>
-Applique une fonction à chaque élément, et<br> retourne <b>les résultats</b>.
+	Applique une fonction à chaque élément, et<br> retourne <b>les résultats</b>.
 </blockquote>
 
 <br>
 
 <pre><code class="javascript" data-trim data-noescape>
-var partition = [ 42, 24, 91, 14, 27, 34 ];
+var partition = [ 42, 24, 91, 14, 27, 34 ]
 
 partition.map(function (note) {
   return octave(note)
