--- a/slides/midi2.html
+++ b/slides/midi2.html
@@ -8,7 +8,7 @@ var midi = {
     [
       { subtype:'noteOn', noteNumber:73 },
       ..
-      { subtype:'noteOff', noteNumber:73 },
+      { subtype:'noteOff', noteNumber:73 }
     ]
   ]
 }
