--- a/slides/reduce.html
+++ b/slides/reduce.html
@@ -8,7 +8,7 @@ Réduit une liste, en appliquant une fonction à chaque<br> élément, et retour
 <br>
 
 <pre><code class="javascript" data-trim data-noescape>
-var liste = [ 1, 2, 3 ];
+var liste = [ 1, 2, 3 ]
 
 function somme(acc, e) {
   return acc + e;
