--- a/slides/composition4.html
+++ b/slides/composition4.html
@@ -9,10 +9,10 @@ function displayNotes(elem) {
     map(noteValueToText),
     join(' '),
     addToDomElem(elem)
-  );
+  )
 }
 
-var outputNotes = displayNotes('output');
+var outputNotes = displayNotes('output')
 outputNotes(notes);
 
 </code></pre>
