--- a/slides/find.html
+++ b/slides/find.html
@@ -7,10 +7,10 @@ Applique une fonction à chaque élément, et<br> retourne <b>le premier</b> pou
 <br>
 
 <pre><code class="javascript" data-trim data-noescape>
-var partition = [ 42, 24, 91, 14, 27, 34 ];
+var partition = [ 42, 24, 91, 14, 27, 34 ]
 
-partition.find(function (note){
-  return note < 30;
+partition.find(function (note) {
+  return note < 30
 })
 
 // 24
