updated url to download app

--- a/slides/exercices/_start.html
+++ b/slides/exercices/_start.html
@@ -1,11 +1,14 @@
 <h1>Getting started</h1>
 
+Télécharger l'app pour votre plateforme ici:<br>
+<a href="http://www.sous-anneau.org/pw2016/">http://www.sous-anneau.org/pw2016/</a><br>
+ou
 <pre><code class="bash" data-trim data-noescape>
 $> git clone git@github.com:vincent/js-fp-tool.git
 $> npm i && npm start
 </code></pre>
 
-<img class="sshot" style="width: 80%" src="./slides/images/electron.png" alt="screenshot" />
+<img class="sshot" style="width: 60%" src="./slides/images/electron.png" alt="screenshot" />
 
 <aside class="notes">
   Donc vous devriez avoir devant vous quelque chose qui ressemble à ça.<br>
