--- a/slides/monad.html
+++ b/slides/monad.html
@@ -2,8 +2,8 @@
 <h1>Monades</h1>
 
 <blockquote style="font-size: 0.7em">
-  <a href="https://www.youtube.com/watch?v=dkZFtimgAcM">Les monades sont maudites, une fois que vous avez compris le concept,<br>
-  vous perdez toute capacité à l'expliquer</a> -- Douglas Crockford
+  <a href="https://www.youtube.com/watch?v=dkZFtimgAcM">"Les monades sont maudites, une fois que vous avez compris le concept,<br>
+  vous perdez toute capacité à l'expliquer"</a> -- Douglas Crockford
 </blockquote>
 <style>
 dl.monad dd {
