--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
             plein d'autres définitions, on a essayé de faire simple ici<br>
             concept de base: fonction, <br>
             on va tout faire à base de fonction, composer des fonctions entre elles, etc.<br>
-            style de programmation et paradigme, d'autres paradigmes existent: impératif, orienté objet, ...<br>
-            changement d'état: état de votre app javascript = contenu de vos variables à un instant t. Plus les états et les changements entre états sont complexes, plus on risque des bugs via effets de bord.<br>
+            tout en essayant d'éviter les changements d'états<br>
+            c'est ce qui la différencie des autres méthodes de programmation comme l'impératif ou la POO<br>
           </aside>
         </section>
 
@@ -178,7 +178,7 @@
             <img class="workimg" src="css/workimg/johnny-automatic-withdrawing-the-iron-800px.png">
             <h1>Getting started</h1>
             <aside class="notes">
-              Vincent<br>
+              Alain<br>
               Avant d'aller plus loin, je vous propose d'ouvrir le support d'atelier que l'on vous a fourni.<br>
               Si vous ne l'avez pas, demandez-le nous, on vous le donnera sur clé USB, c'est rapide à mettre en place.<br>
             </aside>
@@ -239,8 +239,7 @@
             <h1>Fonctions pures<br><small>&amp;</small><br>Effets de bord</h1>
             <aside class="notes">
               Vincent<br>
-              Avant de parler de fonctions pures, il faut prendre un peu  de recul<br>
-              Et parler de ce va différencier la prog. fonc. des autres paradigmes.<br>
+              différencier la prog. fonc. des autres paradigmes.<br>
             </aside>
           </section>
           <section>
@@ -266,6 +265,7 @@
             </blockquote>
             <aside class="notes">
               Vincent<br>
+              mais pas d'effet de bord = pas d'objet ??
             </aside>
           </section>
 
