--- a/slides/biblio.html
+++ b/slides/biblio.html
@@ -7,7 +7,8 @@
 <li><a href="https://bethallchurch.github.io/JavaScript-and-Functional-Programming/">Bonnes pratiques</a></li>
 <li><a href="https://github.com/hemanth/functional-programming-jargon">Dictionnaire des principaux concepts et design patterns</a></li>
 <li><a href="https://github.com/you-dont-need/You-Dont-Need-Lodash-Underscore">You don't need Lodash/Underscore</a></li>
-<li><a href="http://jrsinclair.com/articles/2016/marvellously-mysterious-javascript-maybe-monad/">The Marvellously Mysterious JavaScript Maybe Monad</a></li>
+<li><a href="http://jrsinclair.com/articles/2016/marvellously-mysterious-javascript-maybe-monad/">The Marvellously Mysterious JavaScript Maybe Monad</a><br><br></li>
+<li><a href="http://github.com/vincent/js-fp">http://github.com/vincent/js-fp</a></li>
 </ul>
 
 
