--- a/slides/exercices/_start.html
+++ b/slides/exercices/_start.html
@@ -5,7 +5,7 @@ Télécharger l'app pour votre plateforme ici:<br>
 ou
 <pre><code class="bash" data-trim data-noescape>
 $> git clone git@github.com:vincent/js-fp-tool.git
-$> npm i && npm start
+$> cd js-fp-tool; npm install; npm start
 </code></pre>
 
 <img class="sshot" style="width: 60%" src="./slides/images/electron.png" alt="screenshot" />
