--- a/slides/maybe.html
+++ b/slides/maybe.html
@@ -13,7 +13,7 @@ var c = a.chain(task);
 // task n'a pas besoin de gérer le cas null / undefined
 
 // récupérer la valeur (si nécessaire)
-var d = c.orElse(default)
+var d = c.getOrElse(default)
 var e = c.isNone()
 </code></pre>
 
