--- a/slides/midi2.html
+++ b/slides/midi2.html
@@ -16,6 +16,7 @@ var midi = {
 
 <aside class="notes">
   voila à quoi ressemble la structure MIDI, en JS<br>
+  dans exemples, simpleTrack = juste une track, pas le midi complet<br>
   <br>
   on va reprendre sur la théorie<br>
   n'hésitez pas à regarder un peu le support d'atelier<br>
