--- a/slides/promises.html
+++ b/slides/promises.html
@@ -3,7 +3,7 @@
 
 <ul>
   <li>Meilleure gestion des erreurs</li>
-  <li>Sans un contexte asynchrone</li>
+  <li>Dans un contexte asynchrone</li>
   <li>Pallier au "callback hell" (⚠)</li>
 </ul>
 
