--- a/slides/composition2.html
+++ b/slides/composition2.html
@@ -6,16 +6,19 @@
 
 var notes = [ 1, 2, 3 ]
 
-function noteValueToText(note) {
-  var notes = [ 'do', 'ré', 'mi', 'fa' , 'sol', 'la', 'si']
-  return notes[note % 7]
-}
-
 function displayNotes(notes, elem) {
   var buffer = ''
   for (var i = 0; i < notes.length; i++) {
     buffer += noteValueToText(notes[i]) + ' '
   }
   document.getElementById(elem).innerHTML = buffer
+  // affiche "ré mi fa"
 }
+
+function noteValueToText(note) {
+  var notes = [ 'do', 'ré', 'mi', 'fa' , 'sol', 'la', 'si']
+  return notes[note % 7]
+}
+
+
 </code></pre>
